tests/paczka1/small_fuzzy/33441773.err
Error in line 6: A944 S431 0,3
Error in line 3: VrXbTU08t A944 9,6
Error in line 7: A944 A557 93,4
Error in line 8: VrXbTU08t A124 72,6
